<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ИПД Расписание</string>

    <string name="k1">Расписание курс 1</string>
    <string name="k2">Расписание курс 2</string>
    <string name="k3">Расписание курс 3</string>
    <string name="k4">Расписание курс 4</string>
    <string name="k5">Расписание курс 5</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Информация</string>
    <string name="inf1"><i>Студенты дневной формы получения образования, занятия начинаются с  08.02.2018 (четверг)</i></string>
    <string name="inf4"><i>"Спасибо институту. Второе высшее образование поможет мне добиться успеха по окончании игровой карьеры — в качестве менеджера или, например, предпринимателя.  Лучше быть менеджером, нежели тренером. Последние часто меняются, первые — остаются. <b>Выпуск: 2012, Бизнес-администрирование"</b></i></string>
    <string name="inf3">Прием оплаты за пересдачу зачетов, экзаменов и отработок пропущенных занятий осуществляется в кассе института (каб.512) 5 этаж.\n <b>Время работы кассы:</b>\n
    Понедельник-пятница 9.00-16.50\n (технический перерыв 13.00-13.30, 15.30-16.00).\n Суббота и воскресенье-выходной.\n Допуск к экзаменам для студентов заочной формы получения образования осуществляется в каб 401(4 этаж).\n
    УДАЧНОЙ ВАМ УЧЁБЫ!\n <b>График работы кабинета тестирования:</b> \n
Понедельник- пятница 9.00-17.00\n
(технический перерыв 12.45-13.15)</string>
    <string name="title_activity_scrolling">Информация</string>
    <string name="lorem_ipsum1">РЕКВИЗИТЫ ДЛЯ ОПЛАТЫ с 04.07.2017:</string>
    <string name="lorem_ipsum2">Комиссия %</string>
    <string name="text_content1">"Учреждение образования Институт предпринимательской деятельности
220033, г. Минск, ул. Серафимовича,11 УНП 101357946,ОКПО 14646415,
р/с BY46GTBN30158900000000452401 в ОАО Франсабанк, код GTBNBY22
Адрес банка: г.Минск, пр-т Независимости,95а"</string>
    <string name="text_content2">"Уточняйте в отделении банка где собираетесь произвести оплату"</string>
    <string name="title_activity_2017">Реквизиты для оплаты</string>

    <string name="title_activity_main">Main</string>

    <string name="mal_launch_about_activity">Launch About Activity</string>
    <string name="mal_launch_about_fragment">О программе</string>
    <string name="title_activity_example_material_about_fragment" tools:ignore="UnusedResources">ExampleMaterialAboutFragment
    </string>

    <string name="compose_shortcut_short_label1">Расписание 1 курс</string>
    <string name="compose_shortcut_short_label2">Расписание 2 курс</string>
    <string name="compose_shortcut_short_label3">Расписание 3 курс</string>
    <string name="compose_shortcut_short_label4">Расписание 4 курс</string>
    <string name="compose_shortcut_long_label1">Расписание 1 курс</string>
    <string name="compose_shortcut_long_label2">Расписание 2 курс</string>
    <string name="compose_shortcut_long_label3">Расписание 3 курс</string>
    <string name="compose_shortcut_long_label4">Расписание 4 курс</string>
    <string name="compose_disabled_message1">Disable Message</string>
    <string name="str_shortcut_two">uoipd.by</string>
    <string name="str_shortcut_two_desc">Shortcut using code</string>

    <string name="inf2">"РЕКВИЗИТЫ ДЛЯ ОПЛАТЫ с 04.07.2017"\n\n

"КОМИССИЯ:"\n
"Уточняйте в отделении банка где собираетесь произвести оплату"\n\n

"Учреждение образования Институт предпринимательской деятельности"\n
"220033, г. Минск, ул. Серафимовича,11"\n
"УНП 101357946,ОКПО 14646415,"\n
"р/с BY46GTBN30158900000000452401" \n
        "в ОАО Франсабанк, код GTBNBY22"\n
"Адрес банка: г.Минск, пр-т Независимости,95а"\n</string>

    <string name="timing">Сроки, реквизиты оплаты</string>
    <string name="phonebookipd">Телефонный справочник</string>
    <string name="zaochnoe_a">2 курс 02.12-21.12.2019</string>
    <string name="zaochnoe_b">3 курс сокр.с 19.02-10.03.18</string>
    <string name="zaochnoe_c">3 курс 5 сессия 23.10-11.11.2017</string>
    <string name="zaochnoe_d">2 курс 09.10-28.10.2017</string>

    <string name="parsenewcontent1">Новости института</string>

    /**
    * Application aktivita main thing
    * Created by kiruha_21 on 04.02.2018.
    */

    <string name="a1">Михаил ГРАБОВСКИЙ (Игрок национальной сборной Беларуси по хоккею, Нью-Йорк Айлендерс)</string>
    <string name="a2">Расписание звонков</string>
    <string name="a3">Минск, ул.Серафимовича,11</string>
    <string name="a4">Открыто пн-сб 7:00–21:00</string>
    <string name="a5"> </string>
    <string name="a6"> </string>
    <string name="a7"> </string>
    <string name="a8"> </string>
    <string name="a9"> </string>
    <string name="a10"> </string>
    <string name="a11"> </string>
    <string name="a12"> </string>
    <string name="a13"> </string>
    <string name="a14"> </string>
    <string name="a15"> </string>

</resources>
