<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="Новости института:">
            <menu>
                <item
                    android:id="@+id/parsenewcontent1"
                    android:icon="@drawable/ic_google_chrome_grey600_24dp"
                    android:title="@string/parsenewcontent1" />
            </menu>
        </item>
        <item android:title="Расписание занятий:">
            <menu>
                <item
                    android:id="@+id/nav_1"
                    android:icon="@drawable/ic_picture_as_pdf_black_24dp"
                    android:title="1 курс" />
                <item
                    android:id="@+id/nav_2"
                    android:icon="@drawable/ic_picture_as_pdf_black_24dp"
                    android:title="2 курс" />
                <item
                    android:id="@+id/nav_3"
                    android:icon="@drawable/ic_picture_as_pdf_black_24dp"
                    android:title="3 курс" />
                <item
                    android:id="@+id/nav_4"
                    android:icon="@drawable/ic_picture_as_pdf_black_24dp"
                    android:title="4 курс" />
                <item
                    android:id="@+id/nav_5"
                    android:icon="@drawable/ic_picture_as_pdf_black_24dp"
                    android:title="5 курс" />
            </menu>
        </item>
    </group>
    <item android:title="Заочное отделение:">
        <menu>
            <item
                android:id="@+id/zaochnoe_a"
                android:icon="@drawable/ic_picture_as_pdf_black_24dp"
                android:title="@string/zaochnoe_a" />
        </menu>
    </item>

    <item android:title="Дополнительно:">
        <menu>
            <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="Рассказать друзьям" />
            <item
                android:id="@+id/timing"
                android:icon="@drawable/ic_timetable_grey600_24dp"
                android:title="@string/timing" />
            <item
                android:id="@+id/raspz"
                android:icon="@drawable/ic_picture_as_pdf_black_24dp"
                android:title="@string/a2" />
            <item
                android:id="@+id/phonebookipd1"
                android:icon="@drawable/ic_contacts_grey600_24dp"
                android:title="@string/phonebookipd" />
            <item
                android:id="@+id/activiti_scrol"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="Информация" />
            <item
                android:id="@+id/intern"
                android:icon="@drawable/ic_google_chrome_grey600_24dp"
                android:title="uoipd.by" />
        </menu>
    </item>

</menu>
